--- a/Wide-field-DSLR-astro-photography-post-processing-in-Pixinsight/index.html
+++ b/Wide-field-DSLR-astro-photography-post-processing-in-Pixinsight/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>Wide-field DSLR astro-photography post-processing in Pixinsight</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>		
 			
