--- a/test_HDR/compare.html
+++ b/test_HDR/compare.html
@@ -137,8 +137,8 @@
     }
 
     function updateLabels() {
-      leftLabel.textContent  = leftSel.value;
-      rightLabel.textContent = rightSel.value;
+      leftLabel.textContent  = rightSel.value;
+      rightLabel.textContent = leftSel.value;
     }
 
     leftSel.addEventListener('change', () => {
