--- a/test_HDR/compare.html
+++ b/test_HDR/compare.html
@@ -67,27 +67,39 @@
   <div class="controls">
     <label>Left:
       <select id="rightSel">
-        <option value="P3/SDR_P3.jpg">SDR - P3</option>
-        <option value="P3/HDR_P3.avif">HDR - P3</option>
-        <option value="P3/HDR_P3_AdobeGainMap.avif">HDR with Adobe Gain Map - P3</option>
-        <option value="P3/HDR_P3_myGainMap.avif">HDR with my Gain Map - P3</option>
-        <option value="sRGB/SDR_sRGB.jpg">SDR - sRGB</option>
-        <option value="sRGB/HDR_sRGB.avif">HDR - sRGB</option>
-        <option value="sRGB/HDR_sRGB_AdobeGainMap.avif">HDR with Adobe Gain Map - sRGB</option>
-        <option value="sRGB/HDR_sRGB_myGainMap.avif">HDR with my Gain Map - sRGB</option>
+        <option value="P3/SDR_P3.jpg">SDR - P3 (JPEG)</option>
+        <option value="P3/HDR_P3.jpg">HDR - P3 (JPEG)</option>
+        <option value="P3/HDR_P3.jxl">HDR - P3 (JPEG XL)</option>
+        <option value="P3/HDR_P3.avif">HDR - P3 (AVIF)</option>
+        <option value="P3/HDR_P3_AdobeGainMap.jxl">HDR with Adobe Gain Map - P3 (JPEG XL)</option>
+        <option value="P3/HDR_P3_AdobeGainMap.avif">HDR with Adobe Gain Map - P3 (AVIF)</option>
+        <option value="P3/HDR_P3_myGainMap.avif">HDR with my Gain Map - P3 (AVIF)</option>
+        <option value="sRGB/SDR_sRGB.jpg">SDR - sRGB (JPEG)</option>
+        <option value="sRGB/HDR_sRGB.jpg">HDR - sRGB (JPEG)</option>
+        <option value="sRGB/HDR_sRGB.jxl">HDR - sRGB (JPEG XL)</option>
+        <option value="sRGB/HDR_sRGB.avif">HDR - sRGB (AVIF)</option>
+        <option value="sRGB/HDR_sRGB_AdobeGainMap.jxl">HDR with Adobe Gain Map - sRGB (JPEG XL)</option>
+        <option value="sRGB/HDR_sRGB_AdobeGainMap.avif">HDR with Adobe Gain Map - sRGB (AVIF)</option>
+        <option value="sRGB/HDR_sRGB_myGainMap.avif">HDR with my Gain Map - sRGB (AVIF)</option>
       </select>
     </label>
 
     <label>Right:
       <select id="leftSel">
-        <option value="P3/SDR_P3.jpg">SDR - P3</option>
-        <option value="P3/HDR_P3.avif">HDR - P3</option>
-        <option value="P3/HDR_P3_AdobeGainMap.avif">HDR with Adobe Gain Map - P3</option>
-        <option value="P3/HDR_P3_myGainMap.avif">HDR with my Gain Map - P3</option>
-        <option value="sRGB/SDR_sRGB.jpg">SDR - sRGB</option>
-        <option value="sRGB/HDR_sRGB.avif">HDR - sRGB</option>
-        <option value="sRGB/HDR_sRGB_AdobeGainMap.avif">HDR with Adobe Gain Map - sRGB</option>
-        <option value="sRGB/HDR_sRGB_myGainMap.avif">HDR with my Gain Map - sRGB</option>
+        <option value="P3/SDR_P3.jpg">SDR - P3 (JPEG)</option>
+        <option value="P3/HDR_P3.jpg">HDR - P3 (JPEG)</option>
+        <option value="P3/HDR_P3.jxl">HDR - P3 (JPEG XL)</option>
+        <option value="P3/HDR_P3.avif">HDR - P3 (AVIF)</option>
+        <option value="P3/HDR_P3_AdobeGainMap.jxl">HDR with Adobe Gain Map - P3 (JPEG XL)</option>
+        <option value="P3/HDR_P3_AdobeGainMap.avif">HDR with Adobe Gain Map - P3 (AVIF)</option>
+        <option value="P3/HDR_P3_myGainMap.avif">HDR with my Gain Map - P3 (AVIF)</option>
+        <option value="sRGB/SDR_sRGB.jpg">SDR - sRGB (JPEG)</option>
+        <option value="sRGB/HDR_sRGB.jpg">HDR - sRGB (JPEG)</option>
+        <option value="sRGB/HDR_sRGB.jxl">HDR - sRGB (JPEG XL)</option>
+        <option value="sRGB/HDR_sRGB.avif">HDR - sRGB (AVIF)</option>
+        <option value="sRGB/HDR_sRGB_AdobeGainMap.jxl">HDR with Adobe Gain Map - sRGB (JPEG XL)</option>
+        <option value="sRGB/HDR_sRGB_AdobeGainMap.avif">HDR with Adobe Gain Map - sRGB (AVIF)</option>
+        <option value="sRGB/HDR_sRGB_myGainMap.avif">HDR with my Gain Map - sRGB (AVIF)</option>
       </select>
     </label>
 
