--- a/test_HDR/compare.html
+++ b/test_HDR/compare.html
@@ -68,38 +68,42 @@
     <label>Left:
       <select id="rightSel">
         <option value="P3/SDR_P3.jpg">SDR - P3 (JPEG)</option>
-        <option value="P3/HDR_P3.jpg">HDR - P3 (JPEG)</option>
         <option value="P3/HDR_P3.jxl">HDR - P3 (JPEG XL)</option>
         <option value="P3/HDR_P3.avif">HDR - P3 (AVIF)</option>
+        <option value="P3/HDR_P3_AdobeGainMap.jpg">HDR with Adobe Gain Map - P3 (JPEG)</option>
         <option value="P3/HDR_P3_AdobeGainMap.jxl">HDR with Adobe Gain Map - P3 (JPEG XL)</option>
         <option value="P3/HDR_P3_AdobeGainMap.avif">HDR with Adobe Gain Map - P3 (AVIF)</option>
         <option value="P3/HDR_P3_myGainMap.avif">HDR with my Gain Map - P3 (AVIF)</option>
+        <option value="P3/HDR_P3_myGainMap_reversed.avif">HDR with my Gain Map (inverted) - P3 (AVIF)</option>
         <option value="sRGB/SDR_sRGB.jpg">SDR - sRGB (JPEG)</option>
-        <option value="sRGB/HDR_sRGB.jpg">HDR - sRGB (JPEG)</option>
         <option value="sRGB/HDR_sRGB.jxl">HDR - sRGB (JPEG XL)</option>
         <option value="sRGB/HDR_sRGB.avif">HDR - sRGB (AVIF)</option>
+        <option value="sRGB/HDR_sRGB_AdobeGainMap.jpg">HDR with ADobe Gain Map - sRGB (JPEG)</option>
         <option value="sRGB/HDR_sRGB_AdobeGainMap.jxl">HDR with Adobe Gain Map - sRGB (JPEG XL)</option>
         <option value="sRGB/HDR_sRGB_AdobeGainMap.avif">HDR with Adobe Gain Map - sRGB (AVIF)</option>
         <option value="sRGB/HDR_sRGB_myGainMap.avif">HDR with my Gain Map - sRGB (AVIF)</option>
+        <option value="sRGB/HDR_sRGB_myGainMap_reversed.avif">HDR with my Gain Map (inverted) - sRGB (AVIF)</option>
       </select>
     </label>
 
     <label>Right:
       <select id="leftSel">
         <option value="P3/SDR_P3.jpg">SDR - P3 (JPEG)</option>
-        <option value="P3/HDR_P3.jpg">HDR - P3 (JPEG)</option>
         <option value="P3/HDR_P3.jxl">HDR - P3 (JPEG XL)</option>
         <option value="P3/HDR_P3.avif">HDR - P3 (AVIF)</option>
+        <option value="P3/HDR_P3_AdobeGainMap.jpg">HDR with Adobe Gain Map - P3 (JPEG)</option>
         <option value="P3/HDR_P3_AdobeGainMap.jxl">HDR with Adobe Gain Map - P3 (JPEG XL)</option>
         <option value="P3/HDR_P3_AdobeGainMap.avif">HDR with Adobe Gain Map - P3 (AVIF)</option>
         <option value="P3/HDR_P3_myGainMap.avif">HDR with my Gain Map - P3 (AVIF)</option>
+        <option value="P3/HDR_P3_myGainMap_reversed.avif">HDR with my Gain Map (inverted) - P3 (AVIF)</option>
         <option value="sRGB/SDR_sRGB.jpg">SDR - sRGB (JPEG)</option>
-        <option value="sRGB/HDR_sRGB.jpg">HDR - sRGB (JPEG)</option>
         <option value="sRGB/HDR_sRGB.jxl">HDR - sRGB (JPEG XL)</option>
         <option value="sRGB/HDR_sRGB.avif">HDR - sRGB (AVIF)</option>
+        <option value="sRGB/HDR_sRGB_AdobeGainMap.jpg">HDR with ADobe Gain Map - sRGB (JPEG)</option>
         <option value="sRGB/HDR_sRGB_AdobeGainMap.jxl">HDR with Adobe Gain Map - sRGB (JPEG XL)</option>
         <option value="sRGB/HDR_sRGB_AdobeGainMap.avif">HDR with Adobe Gain Map - sRGB (AVIF)</option>
         <option value="sRGB/HDR_sRGB_myGainMap.avif">HDR with my Gain Map - sRGB (AVIF)</option>
+        <option value="sRGB/HDR_sRGB_myGainMap_reversed.avif">HDR with my Gain Map (inverted) - sRGB (AVIF)</option>
       </select>
     </label>
 
