--- a/test_HDR/index.html
+++ b/test_HDR/index.html
@@ -46,18 +46,23 @@
     </tr>
     <tr>
       <td>HDR</td>
-      <td><a href="P3/HDR_P3.avif">AVIF</a> / <a href="P3/HDR_P3.jpg">JPEG</a> / <a href="P3/HDR_P3.jxl">JPEG XL</a></td>
-      <td><a href="sRGB/HDR_sRGB.avif">AVIF</a> / <a href="sRGB/HDR_sRGB.jpg">JPEG</a> / <a href="sRGB/HDR_sRGB.jxl">JPEG XL</a></td>
+      <td><a href="P3/HDR_P3.jxl">JPEG XL</a> / <a href="P3/HDR_P3.avif">AVIF</a></td>
+      <td><a href="sRGB/HDR_sRGB.jxl">JPEG XL</a> / <a href="sRGB/HDR_sRGB.avif">AVIF</a></td>
     </tr>
     <tr>
       <td>HDR with Adobe Gain Map</td>
-      <td><a href="P3/HDR_P3_AdobeGainMap.avif">AVIF</a> / <a href="P3/HDR_P3_AdobeGainMap.jxl">JPEG XL</a></td>
-      <td><a href="sRGB/HDR_sRGB_AdobeGainMap.avif">AVIF</a> / <a href="sRGB/HDR_sRGB_AdobeGainMap.jxl">JPEG XL</a></td>
+      <td><a href="P3/HDR_P3_AdobeGainMap.jpg">JPEG</a> / <a href="P3/HDR_P3_AdobeGainMap.jxl">JPEG XL</a> / <a href="P3/HDR_P3_AdobeGainMap.avif">AVIF</a></td>
+      <td><a href="sRGB/HDR_sRGB_AdobeGainMap.jpg">JPEG</a> / <a href="sRGB/HDR_sRGB_AdobeGainMap.jxl">JPEG XL</a> / <a href="sRGB/HDR_sRGB_AdobeGainMap.avif">AVIF</a></td>
     </tr>
     <tr>
       <td>HDR with my Gain Map</td>
       <td><a href="P3/HDR_P3_myGainMap.avif">AVIF</a></td>
       <td><a href="sRGB/HDR_sRGB_myGainMap.avif">AVIF</a></td>
+    </tr>
+    <tr>
+      <td>HDR with my Gain Map (inverted)</td>
+      <td><a href="P3/HDR_P3_myGainMap_reversed.avif">AVIF</a></td>
+      <td><a href="sRGB/HDR_sRGB_myGainMap_reversed.avif">AVIF</a></td>
     </tr>
   </table>
 
